[package]
name = "distributed-catalog-system"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "distributed-catalog-system"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.1" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace", "compression-gzip", "cors"]}
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt-multi-thread"]}
hyper = { version = "1.6.0" }

sqlx = { version = "0.8.3", default-features = false, features = ["macros", "postgres", "uuid", "chrono"]}

serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.140" }

thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.97" }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"]}

config = { version = "0.15.11", features = ["toml"]}

uuid = { version = "1.16.0", features = ["serde", "v4"]}
chrono = { version = "0.4.40", features = ["serde"]}
